Fix alignement of colorpicker.

--- a/css/styles.css
+++ b/css/styles.css
@@ -822,17 +822,11 @@ input[type=range][orient=vertical] {
   padding: 0 5px; }
 
 .colorpicker-wrapper {
-  /*position: absolute;*/
-  /*top: 5.5%;*/
-  /*right: 0;*/
   width: 100%;
   height: auto;
-  /*background-color: rgba(255, 255, 255, 0.5);*/
   color: #808080;
-  /*border: 1px solid #E6E6E6;*/
   padding: 3.65px 5px 0 5px;
-  overflow: hidden;
-  /*z-index: 5;*/ }
+  overflow: hidden; }
 
 .colorpicker-controls {
   display: -webkit-flex;
@@ -850,23 +844,26 @@ input[type=range][orient=vertical] {
   text-transform: uppercase;
   font-weight: 500; }
 
+.colorpicker-align {
+  display: -webkit-flex;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-justify-content: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-align-items: center;
+      -ms-flex-align: center;
+          align-items: center; }
+
 #picker {
-  /*position: absolute;*/
-  /*top: 7%;*/
   width: 200px;
   height: 200px;
-  display: inline-block;
-  /*right: 7%;*/
-  /*height: 180px;*/ }
+  display: inline-block; }
 
 #slide {
-  /*position: absolute;*/
-  /*top: 7%;*/
-  /*right: 3%;*/
   width: 30px;
   height: 200px;
-  display: inline-block;
-  /*height: 180px;*/ }
+  display: inline-block; }
 
 .path {
   color: #000000;
