--- a/sass/style.scss
+++ b/sass/style.scss
@@ -354,17 +354,11 @@ input[type=range][orient=vertical] {
 }
 
 .colorpicker-wrapper {
-    /*position: absolute;*/
-    /*top: 5.5%;*/
-    /*right: 0;*/
     width: 100%;
     height: auto;
-    /*background-color: rgba(255, 255, 255, 0.5);*/
     color: #808080;
-    /*border: 1px solid #E6E6E6;*/
     padding: 3.65px 5px 0 5px;
     overflow: hidden;
-    /*z-index: 5;*/
 }
 
 .colorpicker-controls {
@@ -377,28 +371,26 @@ input[type=range][orient=vertical] {
 .section-id {
     font-family: helvetica;
     font-size: 16px;
-     text-transform: uppercase;
-     font-weight: 500;
+    text-transform: uppercase;
+    font-weight: 500;
+}
+
+.colorpicker-align {
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 
 #picker {
-     /*position: absolute;*/
-     /*top: 7%;*/
-     width: 200px;
-     height: 200px;
-     display: inline-block;
-     /*right: 7%;*/
-     /*height: 180px;*/
+    width: 200px;
+    height: 200px;
+    display: inline-block;
 }
 
 #slide {
-    /*position: absolute;*/
-    /*top: 7%;*/
-    /*right: 3%;*/
     width: 30px;
     height: 200px;
-     display: inline-block;
-    /*height: 180px;*/
+    display: inline-block;
 }
 
 .path {
